--- a/readme
+++ b/readme
@@ -5,3 +5,5 @@ Git is a Distribute Version Control System
 This line is modified in GitHub
 
 This line is modified in Local in 21:48
+
+Creating a new branch is quick.
